<resources>
    <string name="app_name">Movie App</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="page_keyword"  translatable="false">page</string>
    <string name="release_date">Release Date</string>
    <string name="user_rating">User Rating</string>
    <string name="content_review">Content long very long Lorem ipsum</string>
    <string name="author_review">Author Name</string>
    <string name="movie_title">MOVIE TITLE</string>
    <string name="movie_trailer">Movie Trailer</string>
    <string name="poster_image_for_movie">Poster Image for Movie</string>
    <string name="fav_icon">Fav Icon</string>

    <string-array name="sort_category">
        <item>Most Popular</item>
        <item>Highest Rated</item>
        <item>Favorite Movies</item>
    </string-array>



</resources>
