<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:background="@color/md_white_1000"
    >

    <ImageView
        android:id="@+id/posterMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/poster_image_for_movie"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/titleMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/movie_title"
        android:layout_below="@+id/posterMovie"
        android:textAppearance="?attr/textAppearanceListItem" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/favIcon"
        android:layout_below="@+id/posterMovie"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_4"
        android:contentDescription="@string/fav_icon"
        android:background="@color/md_white_1000"
        android:src="@drawable/ic_action_fav_selected"
        />

</RelativeLayout>