<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="movieapp.singhania.com.movieapp.ItemDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/movie_release"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_detail_page"
            android:text="@string/release_date"
            android:textSize="@dimen/text_size_detail"
            android:textIsSelectable="true"
            tools:context="movieapp.singhania.com.movieapp.ItemDetailFragment"
            />

        <TextView
            android:id="@+id/movie_release_date"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_detail_page"
            android:textSize="@dimen/text_size_detail"
            android:textColor="@color/colorAccent"
            android:textIsSelectable="true"
            tools:context="movieapp.singhania.com.movieapp.ItemDetailFragment"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/movie_user"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_detail_page"
            android:text="@string/user_rating"
            android:textSize="@dimen/text_size_detail"
            android:textIsSelectable="true"
            tools:context="movieapp.singhania.com.movieapp.ItemDetailFragment"
            />

        <TextView
            android:id="@+id/movie_user_rating"
            style="@style/TextBasicBlack"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_detail_page"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_detail"
            android:textIsSelectable="true"
            tools:context="movieapp.singhania.com.movieapp.ItemDetailFragment"
            />
    </LinearLayout>

    <TextView
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_detail_page"
        android:textSize="@dimen/text_size_detail"
        android:text="@string/movie_trailer"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="true"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trailerList"
        android:padding="@dimen/padding_detail_page"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
    </android.support.v7.widget.RecyclerView>

    <TextView
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_detail_page"
        android:textSize="@dimen/text_size_detail"
        android:text="@string/movie_trailer"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="true"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reviewList"
        android:padding="@dimen/padding_detail_page"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
    </android.support.v7.widget.RecyclerView>


</LinearLayout>

